feat(user): update docs user
